--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -1,15 +1,18 @@
 # codeship-steps.yml
-#- name: Build and push to azure docker registry
-#  service: appkubectl
-#  type: push
-#  tag: master
-#  image_name: dockerstore.azurecr.io/oci_kubectl:0.0.1
-#  registry: dockerstore.azurecr.io
-#  dockercfg_service: azure_dockercfg
-- name: check response to kubectl config
+- name: Build and push to Azure Docker Registry
+  service: appkubectl
+  type: push
+  tag: master
+  image_name: dockerstore.azurecr.io/oci_kubectl:0.0.1
+  registry: dockerstore.azurecr.io
+  dockercfg_service: azure_dockercfg
+- name: Check response to kubectl config
   command: kubectl get nodes
   service: appkubectl
-- name: check oci version
+- name: Check OCI Version
   command: oci -v
   service: appkubectl  
+- name: Deploy to Oracle Kubernetes Engine
+  command: apply 
+  service: appkubectl
 
