--- a/codeship-services.yml
+++ b/codeship-services.yml
@@ -1,9 +1,14 @@
-appkubectl:
-  build:      
-    image: dockerstore.azurecr.io/oci_kubectl:0.0.1   # naseemmohammed/oci_kubectl:0.1.1
-    dockerfile_path: Dockerfile
-    encrypted_args_file: config_encrypted
+app:
+  build:
+    image: codeship.azurecr.io/codeship-testing
+    dockerfile_path: ./Dockerfile
 azure_dockercfg:
   image: codeship/azure-dockercfg-generator
   add_docker: true
-  encrypted_env_file: azure.env.encrypted
+  encrypted_env_file:
+    - azure.env.encrypted
+appkubectl:
+  build:      
+    image: dockerstore.azurecr.io/oci_kubectl:0.0.1
+    dockerfile_path: Dockerfile
+    encrypted_args_file: config_encrypted
