--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -1,6 +1,6 @@
 # codeship-steps.yml
 - name: Build and push to Azure Docker Registry
-  service: azure_dockercfg
+  service: app
   type: push
   tag: master
   image_name: dockerstore.azurecr.io/oci_kubectl:0.0.1
