--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -3,16 +3,16 @@
   service: app
   type: push
   tag: master
-  image_name: dockerstore.azurecr.io/oci_kubectl:0.0.1
+  image_name: dockerstore.azurecr.io/aksistioinsurance:0.1.2
   registry: dockerstore.azurecr.io
   dockercfg_service: azure_dockercfg
-- name: Check response to kubectl config
-  command: kubectl get nodes
-  service: appkubectl
-- name: Check OCI Version
-  command: oci -v
-  service: appkubectl  
-- name: Deploy to Oracle Kubernetes Engine
-  command: apply 
-  service: appkubectl
+#- name: Check response to kubectl config
+#  command: kubectl get nodes
+#  service: appkubectl
+#- name: Check OCI Version
+#  command: oci -v
+#  service: appkubectl  
+#- name: Deploy to Oracle Kubernetes Engine
+#  command: apply 
+#  service: appkubectl
 
