--- a/codeship-services.yml
+++ b/codeship-services.yml
@@ -1,6 +1,6 @@
 app:
   build:
-    image: dockerstore.azurecr.io/aksistioinsurance:{{BuildID}}
+    image: dockerstore.azurecr.io/aksistioinsurance:{{.BuildID}}
     dockerfile_path: ./Dockerfile
 azure_dockercfg:
   image: codeship/azure-dockercfg-generator
