--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -4,7 +4,7 @@
   type: push
   tag: master
   image_name: dockerstore.azurecr.io/aksistioinsurance
-  image_tag: {{ .CommitID }}
+  image_tag: CommitID
   registry: dockerstore.azurecr.io
   dockercfg_service: azure_dockercfg
 - name: Check response to kubectl config
