Docker tagging with build id

--- a/codeship-services.yml
+++ b/codeship-services.yml
@@ -11,3 +11,5 @@ appkubectl:
     image: dockerstore.azurecr.io/oci_kubectl:0.0.3
     dockerfile_path: Dockerfile
     encrypted_args_file: config_encrypted
+    args:
+      BuildID: "{{ .BuildID }}"
