--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -1,22 +1,22 @@
 # codeship-steps.yml
-#- name: Build and push to Azure Docker Registry
-#  service: app
-#  type: push
-#  tag: master
-#  image_name: dockerstore.azurecr.io/aksistioinsurance
-#  image_tag: "{{.BuildID}}"
-#  registry: dockerstore.azurecr.io
-#  dockercfg_service: azure_dockercfg
-- name: Check response to kubectl config
-  command: kubectl get nodes
-  service: appkubectl
-- name: Check OCI Version
-  command: oci -v
-  service: appkubectl  
+- name: Build and push to Azure Docker Registry
+  service: app
+  type: push
+  tag: master
+  image_name: dockerstore.azurecr.io/aksistioinsurance
+  image_tag: "{{.BuildID}}"
+  registry: dockerstore.azurecr.io
+  dockercfg_service: azure_dockercfg
+  #- name: Check response to kubectl config
+  #command: kubectl get nodes
+  #service: appkubectl
+  #- name: Check OCI Version
+  #command: oci -v
+  #service: appkubectl  
 - name: Deploy to Oracle Kubernetes Engine
   command: kubectl apply -f insurance.yaml
   service: appkubectl
 - name: Print out the environment varibales
   service: appkubectl
-  command: printenv
+  command: bash -c "echo 'hello'"
 
