--- a/codeship-services.yml
+++ b/codeship-services.yml
@@ -1,7 +1,7 @@
 app:
   build:
     image: dockerstore.azurecr.io/aksistioinsurance
-    dockerfile_path: ./Dockerfile
+    dockerfile_path: Dockerfilewebapi
 azure_dockercfg:
   image: codeship/azure-dockercfg-generator
   add_docker: true
@@ -13,4 +13,4 @@ appkubectl:
     encrypted_args_file: config_encrypted
     #encrypted_env_file: config_encrypted
     args:
-      BuildID: "{{ .CommitID }}"
+      BuildID: "{{.BuildID}}"
