--- a/codeship-services.yml
+++ b/codeship-services.yml
@@ -1,7 +1,7 @@
 app:
   build:
     image: dockerstore.azurecr.io/aksistioinsurance
-    dockerfile_path: Dockerfilewebapi
+    dockerfile_path: ./Dockerfile
 azure_dockercfg:
   image: codeship/azure-dockercfg-generator
   add_docker: true
