Removed buildid from encrypted args file

--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -18,5 +18,5 @@
   service: appkubectl
 - name: Print out the environment varibales
   service: appkubectl
-  command: bash -c "echo 'hello'"
+  command: printenv
 
