--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -4,12 +4,12 @@
   type: push
   tag: master
   image_name: dockerstore.azurecr.io/aksistioinsurance
-  image_tag: "{{.COMMIT_ID}}"
+  image_tag: "{{ .CommitID }}"
   registry: dockerstore.azurecr.io
   dockercfg_service: azure_dockercfg
-- name: Check response to kubectl config
-  command: kubectl get nodes
-  service: appkubectl
+  #- name: Check response to kubectl config
+  #command: kubectl get nodes
+  #service: appkubectl
 - name: Check OCI Version
   command: oci -v
   service: appkubectl  
