--- a/codeship-services.yml
+++ b/codeship-services.yml
@@ -1,6 +1,6 @@
 app:
   build:
-    image: dockerstore.azurecr.io/aksistioinsurance
+    image: dockerhouse.azurecr.io/codeshipacroke
     dockerfile_path: Dockerfileweb
 azure_dockercfg:
   image: codeship/azure-dockercfg-generator
@@ -8,7 +8,7 @@ azure_dockercfg:
   encrypted_env_file: az_config_encrypted
 appkubectl:
   build:      
-    image: dockerstore.azurecr.io/oci_kubectl:0.0.4
+    image: dockerhouse.azurecr.io/oci_kubectl:0.0.4
     dockerfile_path: Dockerfile
     encrypted_args_file: config_encrypted
     #encrypted_env_file: config_encrypted
