--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -3,9 +3,9 @@
   service: app
   type: push
   tag: master
-  image_name: dockerstore.azurecr.io/aksistioinsurance
+  image_name: dockerhouse.azurecr.io/codeshipacroke
   image_tag: "{{ .CommitID }}"
-  registry: dockerstore.azurecr.io
+  registry: dockerhouse.azurecr.io
   dockercfg_service: azure_dockercfg
   #- name: Check response to kubectl config
   #command: kubectl get nodes
