--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -7,9 +7,9 @@
   image_tag: "{{ .CommitID }}"
   registry: dockerhouse.azurecr.io
   dockercfg_service: azure_dockercfg
-  #- name: Check response to kubectl config
-  #command: kubectl get nodes
-  #service: appkubectl
+- name: Check response to kubectl config
+  command: kubectl get nodes
+  service: appkubectl
 - name: Check OCI Version
   command: oci -v
   service: appkubectl  
