--- a/insurance.yaml
+++ b/insurance.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: insurance-api
-        image: dockerstore.azurecr.io/aksistioinsurance:##tag##
+        image: dockerhouse.azurecr.io/codeshipacroke:##tag##
         resources:
           requests:
             memory: "32Mi"
