--- a/webapi/appsettings.json
+++ b/webapi/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppConnectServer" : "https://localhost:8443/ws/security"
 }
