--- a/Dockerfileweb
+++ b/Dockerfileweb
@@ -15,5 +15,6 @@ RUN dotnet publish -c Release -o out
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1 AS runtime
 WORKDIR /app
 COPY --from=build /app/webapi/out ./
-ENTRYPOINT ["dotnet", "Insurancev1.dll"]
+ENTRYPOINT ["dotnet", "ibmappconnect-with-sidecarapp.dll"]
+
 
