updating port of sidecar

--- a/webapi/appsettings.json
+++ b/webapi/appsettings.json
@@ -6,6 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Host": {  
+    "Port": 8000  
+  },
   "AllowedHosts": "*",
   "AppConnectServer" : "https://localhost:8443/ws/security"
 }
