--- a/webapi/appsettings.json
+++ b/webapi/appsettings.json
@@ -10,5 +10,5 @@
     "Port": 8000  
   },
   "AllowedHosts": "*",
-  "AppConnectServer" : "https://localhost:8443/ws/security"
+  "AppConnectServer" : "https://127.0.0.1:8443/ws/security"
 }
