--- a/webapi/appsettings.Development.json
+++ b/webapi/appsettings.Development.json
@@ -5,5 +5,11 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "Host": {  
+    "Port": 8000  
+  },
+  "AllowedHosts": "*",
+  "AppConnectServerIP" : "129.146.222.62",
+  "AppConnectClientName" : "AppConnectClient"
 }
