--- a/webapi/appsettings.json
+++ b/webapi/appsettings.json
@@ -10,5 +10,6 @@
     "Port": 8000  
   },
   "AllowedHosts": "*",
-  "AppConnectServer" : "https://127.0.0.1:8443/ws/security"
+  "AppConnectServerIP" : "129.146.222.62",
+  "AppConnectClientName" : "AppConnectClient"
 }
