--- a/allyamls/locust-test/locust.yaml
+++ b/allyamls/locust-test/locust.yaml
@@ -33,7 +33,7 @@ apiVersion: v1
 metadata:
   name: locust-web-service   
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
   - name: http
     protocol: TCP
