--- a/allyamls/sqlserveryaml-dynamic-storage/sqldeployment.yaml
+++ b/allyamls/sqlserveryaml-dynamic-storage/sqldeployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   name: mssql-deployment
+  namespace: ibmappconnectns
 spec:
   replicas: 1
   template:
@@ -37,6 +38,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mssql-deployment
+  namespace: ibmappconnectns
 spec:
   selector:
     app: mssql
