--- a/allyamls/sqlserveryaml-dynamic-storage/pvc.yaml
+++ b/allyamls/sqlserveryaml-dynamic-storage/pvc.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mssql-data-claim
+  namespace: ibmappconnectns
 spec:
   storageClassName: "oci"
   selector:
