--- a/allyamls/locust-test/scripts-cm.yaml
+++ b/allyamls/locust-test/scripts-cm.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: scripts-cm
+  namespace: ibmappconnectns
 data:
   locustfile.py: |
     import random
